--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
-    id 'net.neoforged.moddev' version '1.0.17'
+    id 'net.neoforged.moddev' version '1.0.19'
+    id 'io.freefair.lombok' version '8.7.1'
 }
 
 tasks.named('wrapper', Wrapper).configure {
